--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@types/node": "^22.19.7",
     "tsx": "^4.19.2",
     "typescript": "^5.8.2",
     "vitest": "^4.0.18"
