--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
   "bin": {
     "hanuman-dev": "dist/cli.js"
   },
+  "files": [
+    "dist",
+    "README.md",
+    "docs",
+    "scripts",
+    "prd.json"
+  ],
   "scripts": {
     "build": "tsc -p tsconfig.json",
+    "prepare": "npm run build",
     "dev": "tsx src/cli.ts",
     "test": "vitest run"
   },
