--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build": "tsc -p tsconfig.json",
     "prepare": "npm run build",
     "dev": "tsx src/cli.ts",
-    "test": "vitest run"
+    "test": "vitest run",
+    "check:deadcode": "knip"
   },
   "dependencies": {
     "commander": "^12.1.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.19.7",
+    "knip": "^5.33.0",
     "tsx": "^4.19.2",
     "typescript": "^5.8.2",
     "vitest": "^4.0.18"
