ralph: AR8-todo-convention

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test": "vitest run",
     "check:deadcode": "knip",
     "check:complexity": "eslint \"src/**/*.{ts,tsx}\"",
-    "check:dup": "pnpm dlx jscpd --config .jscpd.json"
+    "check:dup": "pnpm dlx jscpd --config .jscpd.json",
+    "check:todo": "tsx scripts/check-todo.ts"
   },
   "dependencies": {
     "commander": "^12.1.0",
